--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,25 @@
 .App {
-  text-align: center;
+	text-align: center;
+	font-family: Helvetica, serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.nav-link {
+	font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.point{
+	display: block;
+	padding: .5em 1em;
+	font-weight: bold;
+	margin-left: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+.fa-coins{
+	margin-right: 0.3em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile-img{
+	display: block;
+	height: 2.5em;
+	padding: .25em 0;
 }
