--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,20 @@
 .App {
-	text-align: center;
-	font-family: Helvetica, serif;
-}
+  font-family: Helvetica, serif; }
 
-.nav-link {
-	font-weight: bold;
-}
+.navbar {
+  padding: .8rem 1rem; }
+  .navbar .nav-link {
+    font-weight: bold; }
+  .navbar .point {
+    display: block;
+    padding: .5rem 1rem;
+    font-weight: bold;
+    margin-left: 1rem; }
+  .navbar .fa-coins {
+    margin-right: 0.3rem; }
+  .navbar .profile-img {
+    display: block;
+    height: 2.5rem;
+    padding: .25rem 0; }
 
-.point{
-	display: block;
-	padding: .5em 1em;
-	font-weight: bold;
-	margin-left: 1em;
-}
-
-.fa-coins{
-	margin-right: 0.3em;
-}
-
-.profile-img{
-	display: block;
-	height: 2.5em;
-	padding: .25em 0;
-}
+/*# sourceMappingURL=App.css.map */
