--- a/src/App.scss
+++ b/src/App.scss
@@ -23,3 +23,81 @@
 		padding: .25rem 0;
 	}
 }
+
+.intro{
+	.main{
+		background-size: cover;
+		color: white;
+		p {
+			font-weight: bold;
+		}
+		.wrapper{
+			margin: 4rem 3rem;
+			.title{
+				font-size: 2rem;
+			}
+			.content{
+				font-size: 1.2rem;
+			}
+			button {
+				background-color: #FA6980;
+				color: white;
+				font-weight: bold;
+				font-size: 0.8rem;
+				margin-top: 1.5rem;
+			}
+		}
+	}
+	.news{
+		padding: 3rem;
+		background-color: white;
+		.header{
+			display: flex;
+			border-bottom: 1px solid lightgray;
+			margin-bottom: 1rem;
+			.title{
+				font-weight: bold;
+				font-size: 1.3rem;
+				margin-bottom: 0.3rem;
+				display: inline-block;
+			}
+			.fas {
+				font-size: 1.3rem;
+				margin-right: 1rem;
+			}
+		}
+		.items{
+			.item{
+				margin-top: 1rem;
+				.title{
+					color: #FA6980;
+					cursor: pointer;
+					font-size: 1.2rem;
+					font-weight: bold;
+					margin-bottom: 0.25rem;
+				}
+				.content{
+					font-size: 0.85rem;
+					color: darkgray;
+					cursor: pointer;
+					margin-bottom: 0.3rem;
+					&:hover {
+						color: darkslategray;
+					}
+
+				}
+				.time{
+					color: darkgray;
+					font-size: .85rem;
+					i{
+						display:inline-block;
+						vertical-align: middle;
+						margin-right: .5rem;
+					}
+				}
+
+			}
+		}
+	}
+
+}
