--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   font-family: Helvetica, serif; }
 
 .navbar {
+  background-color: #e4e4e4;
   padding: .8rem 1rem; }
   .navbar .nav-link {
     font-weight: bold; }
@@ -15,7 +16,9 @@
   .navbar .profile-img {
     display: block;
     height: 2.5rem;
-    padding: .25rem 0; }
+    width: 2.5rem;
+    padding: .25rem 0;
+    clip-path: circle(1rem at center); }
 
 .intro .main {
   background-size: cover;
