--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 }
 
 .navbar{
+	background-color: #e4e4e4;
 	padding: .8rem 1rem;
 
 	.nav-link {
@@ -20,7 +21,9 @@
 	.profile-img{
 		display: block;
 		height: 2.5rem;
+		width: 2.5rem;
 		padding: .25rem 0;
+		clip-path: circle(1rem at center);
 	}
 }
 
