--- a/src/App.css
+++ b/src/App.css
@@ -20,60 +20,64 @@
     padding: .25rem 0;
     clip-path: circle(1rem at center); }
 
-.intro .main {
-  background-size: cover;
-  color: white; }
-  .intro .main p {
-    font-weight: bold; }
-  .intro .main .wrapper {
-    margin: 4rem 3rem; }
-    .intro .main .wrapper .title {
-      font-size: 2rem; }
-    .intro .main .wrapper .content {
-      font-size: 1.2rem; }
-    .intro .main .wrapper button {
-      background-color: #FA6980;
-      color: white;
-      font-weight: bold;
-      font-size: 0.8rem;
-      margin-top: 1.5rem; }
-.intro .news {
-  padding: 3rem;
-  background-color: white; }
-  .intro .news .header {
-    display: flex;
-    border-bottom: 1px solid lightgray;
-    margin-bottom: 1rem; }
-    .intro .news .header .title {
-      font-weight: bold;
-      font-size: 1.3rem;
-      margin-bottom: 0.3rem;
-      display: inline-block; }
-    .intro .news .header .fas {
-      font-size: 1.3rem;
-      margin-right: 1rem; }
-  .intro .news .items .item {
-    margin-top: 1rem; }
-    .intro .news .items .item .title {
-      color: #FA6980;
-      cursor: pointer;
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-bottom: 0.25rem; }
-    .intro .news .items .item .content {
-      font-size: 0.85rem;
-      color: darkgray;
-      cursor: pointer;
-      margin-bottom: 0.3rem; }
-      .intro .news .items .item .content:hover {
-        color: darkslategray; }
-    .intro .news .items .item .time {
-      color: darkgray;
-      font-size: .85rem; }
-      .intro .news .items .item .time i {
-        display: inline-block;
-        vertical-align: middle;
-        margin-right: .5rem; }
+.intro {
+  margin-left: 0;
+  margin-right: 0;
+  flex-wrap: wrap; }
+  .intro .main {
+    background-size: cover;
+    color: white; }
+    .intro .main p {
+      font-weight: bold; }
+    .intro .main .wrapper {
+      margin: 4rem 3rem; }
+      .intro .main .wrapper .title {
+        font-size: 2rem; }
+      .intro .main .wrapper .content {
+        font-size: 1.2rem; }
+      .intro .main .wrapper button {
+        background-color: #FA6980;
+        color: white;
+        font-weight: bold;
+        font-size: 0.8rem;
+        margin-top: 1.5rem; }
+  .intro .news {
+    padding: 3rem;
+    background-color: white; }
+    .intro .news .header {
+      display: flex;
+      border-bottom: 1px solid lightgray;
+      margin-bottom: 1rem; }
+      .intro .news .header .title {
+        font-weight: bold;
+        font-size: 1.3rem;
+        margin-bottom: 0.3rem;
+        display: inline-block; }
+      .intro .news .header .fas {
+        font-size: 1.3rem;
+        margin-right: 1rem; }
+    .intro .news .items .item {
+      margin-top: 1rem; }
+      .intro .news .items .item .title {
+        color: #FA6980;
+        cursor: pointer;
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-bottom: 0.25rem; }
+      .intro .news .items .item .content {
+        font-size: 0.85rem;
+        color: darkgray;
+        cursor: pointer;
+        margin-bottom: 0.3rem; }
+        .intro .news .items .item .content:hover {
+          color: darkslategray; }
+      .intro .news .items .item .time {
+        color: darkgray;
+        font-size: .85rem; }
+        .intro .news .items .item .time i {
+          display: inline-block;
+          vertical-align: middle;
+          margin-right: .5rem; }
 
 @media screen and (max-width: 960px) {
   .menu-section {
