--- a/src/App.css
+++ b/src/App.css
@@ -107,4 +107,41 @@
     overflow: hidden;
     text-overflow: ellipsis; }
 
+.footer {
+  background-color: #A6ADB4;
+  display: flex;
+  flex-wrap: wrap;
+  color: white;
+  font-weight: bold; }
+  @media screen and (max-width: 960px) {
+    .footer {
+      padding: 2rem 3rem; } }
+  @media screen and (min-width: 960px) {
+    .footer {
+      padding: 3rem 8rem; } }
+  .footer .main {
+    display: flex;
+    flex-wrap: wrap; }
+    .footer .main .logo {
+      font-size: 1.3rem;
+      padding-right: 1.5rem;
+      margin-bottom: 1rem; }
+    .footer .main .indices {
+      display: flex;
+      color: #CBD0D3;
+      flex-wrap: wrap; }
+      .footer .main .indices .index {
+        font-size: 0.7rem;
+        width: 25%;
+        margin-right: 1.5rem;
+        margin-bottom: 0.85rem;
+        cursor: pointer; }
+        .footer .main .indices .index:hover {
+          color: white; }
+  .footer .social {
+    margin-left: auto; }
+    .footer .social .icon {
+      margin-right: 1rem;
+      cursor: pointer; }
+
 /*# sourceMappingURL=App.css.map */
