--- a/src/App.scss
+++ b/src/App.scss
@@ -138,3 +138,45 @@
 		text-overflow: ellipsis;
 	}
 }
+
+.footer{
+	background-color: #A6ADB4;
+	@media screen and (max-width: 960px){padding: 2rem 3rem;}
+	@media screen and (min-width: 960px){padding: 3rem 8rem;}
+	display: flex;
+	flex-wrap: wrap;
+	color: white;
+	font-weight: bold;
+
+	.main {
+		display: flex;
+		flex-wrap: wrap;
+		.logo {
+			font-size: 1.3rem;
+			padding-right: 1.5rem;
+			margin-bottom: 1rem;
+		}
+		.indices {
+			display: flex;
+			color: #CBD0D3;
+			flex-wrap: wrap;
+			.index {
+				font-size: 0.7rem;
+				width: 25%;
+				margin-right: 1.5rem;
+				margin-bottom: 0.85rem;
+				cursor: pointer;
+				&:hover {
+					color: white;
+				}
+			}
+		}
+	}
+	.social{
+		margin-left: auto;
+		.icon{
+			margin-right: 1rem;
+			cursor: pointer;
+		}
+	}
+}
