--- a/src/App.css
+++ b/src/App.css
@@ -95,9 +95,12 @@
 
 .card-menu {
   margin-bottom: 2rem; }
+  .card-menu .card-img {
+    cursor: pointer; }
   .card-menu .card-title {
     font-size: 1.0rem;
-    font-weight: bold; }
+    font-weight: bold;
+    cursor: pointer; }
   .card-menu .card-text {
     font-size: .9rem;
     color: darkgray;
@@ -105,7 +108,10 @@
     white-space: normal;
     height: 4rem;
     overflow: hidden;
-    text-overflow: ellipsis; }
+    text-overflow: ellipsis;
+    cursor: pointer; }
+    .card-menu .card-text:hover {
+      color: darkslategray; }
 
 .footer {
   background-color: #A6ADB4;
