--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
   .navbar .nav-link {
     font-weight: bold; }
   .navbar .point {
-    display: block;
+    display: inline-block;
     padding: .5rem 1rem;
     font-weight: bold;
     margin-left: 1rem; }
   .navbar .fa-coins {
     margin-right: 0.3rem; }
   .navbar .profile-img {
-    display: block;
+    display: inline-block;
     height: 2.5rem;
     width: 2.5rem;
     padding: .25rem 0;
