--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
 		font-weight: bold;
 	}
 	.point{
-		display: block;
+		display: inline-block;
 		padding: .5rem 1rem;
 		font-weight: bold;
 		margin-left: 1rem;
@@ -19,7 +19,7 @@
 		margin-right: 0.3rem;
 	}
 	.profile-img{
-		display: block;
+		display: inline-block;
 		height: 2.5rem;
 		width: 2.5rem;
 		padding: .25rem 0;
