--- a/src/App.scss
+++ b/src/App.scss
@@ -5,26 +5,57 @@
 .navbar{
 	background-color: #e4e4e4;
 	padding: .8rem 1rem;
-
 	.nav-link {
 		font-weight: bold;
 	}
-	.point{
+	i{
+		top: auto;
+		bottom: auto;
+		padding: 0;
+	}
+	.fa-coins{
 		display: inline-block;
 		padding: .5rem 1rem;
 		font-weight: bold;
 		margin-left: 1rem;
 	}
-	.fa-coins{
-		margin-right: 0.3rem;
+	.dropdown{
+		position: absolute;
+		background-color: #fff;
+		border: 1px solid rgba(27,31,35,.15);
+		box-shadow: 0 3px 12px rgba(27,31,35,.15);
+		border-radius: 4px;
+		left: auto;
+		right: 1.2rem;
+		z-index: 100;
+		&:before, &:after{
+			content: "";
+			display: inline-block;
+			position: absolute;
+		}
+		&:before{
+			border: 8px solid transparent;
+			border-bottom-color: rgba(27,31,35,.15);
+			left: auto;
+			right: 9px;
+			top: -16px;
+		}
+		&:after{
+			left: auto;
+			right: 10px;
+			top: -14px;
+			border: 7px solid transparent;
+			border-bottom-color: #fff;
+		}
+		div{
+			font-size: 1rem !important;
+			font-weight: bold !important;
+		}
 	}
-	.profile-img{
-		display: inline-block;
-		height: 2.5rem;
-		width: 2.5rem;
-		padding: .25rem 0;
-		clip-path: circle(1rem at center);
-	}
+	.user-menu.dropdown{ width: 10rem; }
+	.login-menu.dropdown { width: 15rem; }
+	button:focus{ box-shadow: unset}
+
 }
 
 .intro{
