--- a/src/App.css
+++ b/src/App.css
@@ -202,13 +202,15 @@
   .label-class .content .image {
     padding: 0; }
     .label-class .content .image img {
-      width: 100%; }
+      width: 100%;
+      height: 70vh; }
   .label-class .content .control {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrxap: wrap;
     flex-direction: column;
     align-items: center; }
     .label-class .content .control .options {
+      width: 80%;
       display: flex;
       flex-wrap: wrap; }
       .label-class .content .control .options .option {
@@ -225,16 +227,19 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center; }
-  .label-bounding .content .canvas {
+  .label-bounding .content .target {
     padding: 0; }
-    .label-bounding .content .canvas h6 {
+    .label-bounding .content .target h6 {
       font-weight: bold; }
+    .label-bounding .content .target .canvas-wrapper {
+      height: 70vh; }
   .label-bounding .content .control {
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
     .label-bounding .content .control .images img {
-      margin: 1rem; }
+      margin: 1rem;
+      height: 100px; }
       .label-bounding .content .control .images img:hover {
         opacity: 0.5; }
     .label-bounding .content .control button {
