--- a/src/App.scss
+++ b/src/App.scss
@@ -249,6 +249,7 @@
 			padding: 0;
 			img {
 				width: 100%;
+				height: 70vh;
 			}
 		}
 		.control {
@@ -258,6 +259,7 @@
 			align-items: center;
 
 			.options {
+				width: 80%;
 				display: flex;
 				flex-wrap: wrap;
 				.option {
@@ -283,10 +285,13 @@
 		flex-wrap: wrap;
 		justify-content: center;
 
-		.canvas{
+		.target{
 			padding: 0;
 			h6 {
 				font-weight: bold;
+			}
+			.canvas-wrapper {
+				height: 70vh;
 			}
 		}
 		.control{
@@ -298,6 +303,7 @@
 
 				img{
 					margin: 1rem;
+					height: 100px;
 					&:hover{
 						opacity: 0.5;
 					}
