--- a/src/App.css
+++ b/src/App.css
@@ -198,15 +198,21 @@
 .label-class .content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: center;
+  align-content: center; }
   .label-class .content .image {
     padding: 0; }
     .label-class .content .image img {
       width: 100%;
       height: 70vh; }
+  .label-class .content .audio {
+    margin: auto; }
+    .label-class .content .audio audio {
+      margin: auto;
+      width: 100%; }
   .label-class .content .control {
     display: flex;
-    flex-wrxap: wrap;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center; }
     .label-class .content .control .options {
