--- a/src/App.scss
+++ b/src/App.scss
@@ -158,7 +158,7 @@
 		cursor: pointer;
 		width: 100%;
 		padding-top: 65%;
-		background-size: 100% 100%;
+		background-size: cover;
 	}
 	.card-title{
 		font-size: 1.0rem;
